tests/compile-fail/suzu_from_location_cross_attr.stderr
error: `from` and `location` cannot be used on the same field
 --> tests/compile-fail/suzu_from_location_cross_attr.rs:8:5
  |
8 |     source: Location,
  |     ^^^^^^
